--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "antd": "^5.24.8",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
@@ -19,8 +20,10 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
+    "redux": "^5.0.1",
     "xlsx": "^0.18.5",
     "xlsx-style": "^0.8.13"
   },
